--- a/detail3.html
+++ b/detail3.html
@@ -125,6 +125,31 @@
       <div class="col-md-6">
         <div class="card h-100 shadow-sm">
           <div class="card-body">
+            <div class="d-flex justify-content-between align-items-center mb-2">
+              <h6 class="mb-0">v0.6.0</h6>
+              <span class="badge bg-primary">Jan 2026</span>
+            </div>
+
+            <p class="text-muted small">News Feature & Sidebar Enhancement</p>
+
+            <ul class="mb-0">
+              <li>Implemented "News" section in sidebar with clickable updates</li>
+              <li>Added dynamic listing of recent changelogs and project highlights</li>
+              <li>Ensured responsive display for mobile and desktop views</li>
+              <li>Enhanced toggle functionality for sidebar menu on mobile devices</li>
+              <li>Styled scrollbar and news items for better visibility and UX</li>
+              <li>Linked news items to respective detail pages for full changelog viewing</li>
+              <li>Improved visual hierarchy with icons and badge highlights for months</li>
+              <li>Adjusted sidebar z-index and padding for proper overlap with main content</li>
+              <li>Minor performance optimizations for rendering sidebar content</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
             <div class="d-flex justify-content-between">
               <strong>v0.5.0</strong>
               <span class="badge bg-success">Feb 2026</span>
