--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 
   <header id="header" class="header dark-background d-flex flex-column">
 
-    <div class="header">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
@@ -48,8 +47,6 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
       <h1 class="sitename">Bagaskara Rifky</h1>
     </a>
 
@@ -67,8 +64,39 @@
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
+
+    <!-- NEWS SECTION -->
+    <div class="sidebar-news mt-auto px-3 pb-4">
+      <h6 class="text-uppercase text-white-50 mb-2">
+        <i class="bi bi-megaphone me-1"></i> News
+      </h6>
+
+      <a href="detail.html" class="news-item d-block mb-2">
+        <small class="text-white-50 d-block">Jan 2026</small>
+        <span class="text-white small">
+          New Changelog 0.5.0 for Ongoing Project Bookstore
+        </span>
+      </a>
+
+      <a href="detail2.html" class="news-item d-block mb-2">
+        <small class="text-white-50 d-block">Jan 2026</small>
+        <span class="text-white small">
+          New Changelog 0.40 for Ongoing Project Weather Prediction
+        </span>
+      </a>
+
+      <a href="detail3.html" class="news-item d-block">
+        <small class="text-white-50 d-block">Jan 2026</small>
+        <span class="text-white small">
+          New Feature For Portfolio "News"
+        </span>
+      </a>
     </div>
-  </header>
+
+    <!-- END NEWS -->
+
+</header>
+
 
   <main class="main">
     <!-- Hero Section -->
@@ -139,7 +167,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p> My skill set represents a balance between design and development, built through personal projects and continuous improvement. I focus on creating functional, user-friendly, and visually consistent web experiences.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -435,9 +463,9 @@
             </div>
           </div>
             <div class="project-progress">
-              <span>Progress: 60%</span>
+              <span>Progress: 75%</span>
               <div class="progress">
-                <div class="progress-bar" style="width: 60%;"></div>
+                <div class="progress-bar" style="width: 75%;"></div>
               </div>
             </div>
         </div><!-- End Ongoing Item -->
@@ -465,9 +493,9 @@
             </div>
           </div>
           <div class="project-progress">
-              <span>Progress: 80%</span>
+              <span>Progress: 90%</span>
               <div class="progress">
-                <div class="progress-bar" style="width: 80%;"></div>
+                <div class="progress-bar" style="width: 90%;"></div>
               </div>
             </div>
         </div><!-- End Ongoing Item -->
