--- a/.trash/AI1.html
+++ b/.trash/AI1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Project Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -39,6 +39,7 @@
 <body class="portfolio-details-page">
 
   <header id="header" class="header dark-background d-flex flex-column">
+
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
@@ -46,17 +47,12 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Alex Smith</h1>
+      <h1 class="sitename">Bagaskara Rifky</h1>
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.instagram.com/splendiddolpin/" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://id.linkedin.com/in/bagaskara-rifky-widianto-a050a0373" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -68,6 +64,36 @@
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
+
+    <!-- NEWS SECTION -->
+    <div class="sidebar-news mt-auto px-3 pb-4">
+      <h6 class="text-uppercase text-white-50 mb-2">
+        <i class="bi bi-megaphone me-1"></i> News
+      </h6>
+
+      <a href="detail.html" class="news-item d-block mb-2">
+        <small class="text-white-50 d-block">Jan 2026</small>
+        <span class="text-white small">
+          New Changelog 0.5.0 for Ongoing Project Bookstore
+        </span>
+      </a>
+
+      <a href="WeatherPred.html" class="news-item d-block mb-2">
+        <small class="text-white-50 d-block">Jan 2026</small>
+        <span class="text-white small">
+          LAUNCHING PROJECT ! MAchine Learning Weather Prediction
+        </span>
+      </a>
+
+      <a href="detail3.html" class="news-item d-block">
+        <small class="text-white-50 d-block">Jan 2026</small>
+        <span class="text-white small">
+          New Feature For Portfolio "News"
+        </span>
+      </a>
+    </div>
+
+    <!-- END NEWS -->
 
   </header>
 
@@ -115,23 +141,13 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/product-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/branding-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/books-1.jpg" alt="">
+                  <img src="assets/img/AI 1/AI1.2.jpg" alt="">
                 </div>
 
               </div>
               <div class="swiper-pagination"></div>
+            </div>
+            <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
             </div>
           </div>
 
@@ -139,18 +155,19 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: SMP Negeri 13 Magelang</li>
-                <li><strong>Project date</strong>: 10 Oktober, 2025</li>
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/splendiddolpin/SIMlaravel.git</a></li>
+                <li><strong>Category</strong>: Image Generation</li>
+                <li><strong>Project date</strong>: 20 January 2025</li>
+                <li><strong>Project URL</strong>: <a href="https://https://www.instagram.com/splendiddolpin/">@splendiddolpin</a></li>
+                
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Sistem Informasi SMP Negeri 13 Magelang</h2>
+              <h2>AI Vintage Photo Generation</h2>
               <p>
-                The Library Management System of SMP Negeri 13 Magelang is designed to simplify and streamline library operations. It helps reduce calculation errors, prevents data loss in book loans, and makes it easier to monitor borrowing activities. The system features automatic fine calculation and efficient member management, ensuring a more organized and accurate library workflow.
+                This AI-generated image captures a nostalgic and cinematic atmosphere, depicting two individuals seated on the floor in front of a retro CRT television. They are both wearing matching black jackets with bold red text on the back reading "The Warriors," referencing the iconic 1979 cult film. The TV screen also displays the same title, reinforcing the theme. Each person is holding a classic game controller, suggesting they are playing a vintage video game adaptation of the movie. The lighting is warm and moody, evoking a 1980s or early 2000s aesthetic, enhanced by the vintage furniture and analog television. The subjects are turned slightly toward the camera, giving a sense of intrigue and connection with the viewer, while also remaining immersed in their shared gaming experience. The image artfully blends retro pop culture with modern digital artistry.
               </p>
             </div>
+            <a href="AI1d.html">Project Details ....</a>
           </div>
 
         </div>
@@ -160,24 +177,6 @@
     </section><!-- /Portfolio Details Section -->
 
   </main>
-
-  <footer id="footer" class="footer position-relative light-background">
-
-    <div class="container">
-      <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
-      </div>
-    </div>
-
-  </footer>
-
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
