--- a/.trash/detail2.html
+++ b/.trash/detail2.html
@@ -142,6 +142,35 @@
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center mb-2">
+                <h6 class="mb-0">v0.9.0</h6>
+                <span class="badge bg-primary">Jan 2026</span>
+              </div>
+
+              <p class="text-muted small">Project Finalization, Deployment Readiness & UX Polishing</p>
+
+              <ul class="mb-0">
+                <li>Finalized end-to-end workflow from landing page to prediction result</li>
+                <li>Implemented dedicated landing page with clear usage guide for first-time users</li>
+                <li>Separated routing between landing page (<code>/</code>) and prediction page (<code>/predict</code>)</li>
+                <li>Stabilized Flask routing and template structure for production readiness</li>
+                <li>Refined prediction form logic to preserve user input after submission</li>
+                <li>Aligned frontend input fields with trained machine learning feature set</li>
+                <li>Improved validation and error handling to prevent invalid user input</li>
+                <li>Optimized DataFrame construction to match <code>model_columns.pkl</code> consistently</li>
+                <li>Verified lightweight model file integration for repository inclusion</li>
+                <li>Prepared project structure and configuration for GitHub publishing</li>
+                <li>Added documentation readiness for README and usage instructions</li>
+                <li>Ensured overall application stability and UX flow prior to public launch</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+
+          <div class="col-md-6">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center mb-2">
                 <h6 class="mb-0">v0.4.0</h6>
                 <span class="badge bg-primary">Jan 2026</span>
               </div>
