--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         </span>
       </a>
 
-      <a href="detail2.html" class="news-item d-block mb-2">
+      <a href="WeatherPred.html" class="news-item d-block mb-2">
         <small class="text-white-50 d-block">Jan 2026</small>
         <span class="text-white small">
-          New Changelog 0.40 for Ongoing Project Weather Prediction
+          LAUNCHING PROJECT ! MAchine Learning Weather Prediction 
         </span>
       </a>
 
@@ -95,7 +95,7 @@
 
     <!-- END NEWS -->
 
-</header>
+  </header>
 
 
   <main class="main">
@@ -394,7 +394,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-photo">
               <div class="portfolio-content h-100">
                 <img style="height: 200px; width: 100%; object-fit: cover;" src="assets/img/yugioh/yugioh0.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -405,7 +405,18 @@
                 </div>
               </div>
             </div>
-
+            
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-100">
+                <img style="height: 200px; width: 100%; object-fit: cover;" src="assets/img/weatherpred/AI1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>AI 1</h4>
+                  <p>Machine Learning</p>
+                  <a href="assets/img/weatherpred/AI1.png" title="yugioh Modding" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="WeatherPred.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
           </div><!-- End Portfolio Container -->
 
         </div>
@@ -471,36 +482,6 @@
         </div><!-- End Ongoing Item -->
 
         <!-- Ongoing Item 2 -->
-        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-          <div class="portfolio-content h-100">
-            <img style="height: 200px; width: 100%; object-fit: cover;"
-                 src="assets/img/ongoing/ongoing2.png"
-                 class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>AI Ongoing</h4>
-              <p>Weather Prediction Model (Training Phase)</p>
-              <a href="assets/img/ongoing/ongoing2.png"
-                 title="AI Project"
-                 data-gallery="portfolio-gallery-ongoing"
-                 class="glightbox preview-link">
-                <i class="bi bi-zoom-in"></i>
-              </a>
-              <a href="detail2.html"
-                 title="Model still improving"
-                 class="details-link">
-                <i class="bi bi-hourglass-split"></i>
-              </a>
-            </div>
-          </div>
-          <div class="project-progress">
-              <span>Progress: 90%</span>
-              <div class="progress">
-                <div class="progress-bar" style="width: 90%;"></div>
-              </div>
-            </div>
-        </div><!-- End Ongoing Item -->
-
-        <!-- Ongoing Item 3 -->
         <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
           <div class="portfolio-content h-100">
             <img style="height: 200px; width: 100%; object-fit: cover;"
@@ -515,7 +496,7 @@
                  class="glightbox preview-link">
                 <i class="bi bi-zoom-in"></i>
               </a>
-              <a href="detail3.html"
+              <a href="detail4.html"
                  title="UI still under refinement"
                  class="details-link">
                 <i class="bi bi-hourglass-split"></i>
@@ -529,6 +510,35 @@
               </div>
             </div>
         </div><!-- End Ongoing Item -->
+
+        <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-photo">
+          <div class="portfolio-content h-100">
+            <img style="height: 200px; width: 100%; object-fit: cover;"
+                 src="assets/img/ongoing/ongoing4.png"
+                 class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>MOD Ongoing</h4>
+              <p>Hearts of Iron 4 Buffs</p>
+              <a href="assets/img/ongoing/ongoing4.png"
+                 title="AI Project"
+                 data-gallery="portfolio-gallery-ongoing"
+                 class="glightbox preview-link">
+                <i class="bi bi-zoom-in"></i>
+              </a>
+              <a href="detail4.html"
+                 title="Model still improving"
+                 class="details-link">
+                <i class="bi bi-hourglass-split"></i>
+              </a>
+            </div>
+          </div>
+          <div class="project-progress">
+              <span>Progress: 40%</span>
+              <div class="progress">
+                <div class="progress-bar" style="width: 40%;"></div>
+              </div>
+            </div>
+        </div>
 
       </div><!-- End Ongoing Container -->
 
