--- a/SISMP.html
+++ b/SISMP.html
@@ -40,7 +40,6 @@
 
   <header id="header" class="header dark-background d-flex flex-column">
 
-    <div class="header">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
@@ -48,23 +47,54 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
       <h1 class="sitename">Bagaskara Rifky</h1>
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.instagram.com/splendiddolpin/" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://id.linkedin.com/in/bagaskara-rifky-widianto-a050a0373" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="index.html"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#portfolio" class="active"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
+        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+        <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
+
+    <!-- NEWS SECTION -->
+    <div class="sidebar-news mt-auto px-3 pb-4">
+      <h6 class="text-uppercase text-white-50 mb-2">
+        <i class="bi bi-megaphone me-1"></i> News
+      </h6>
+
+      <a href="detail.html" class="news-item d-block mb-2">
+        <small class="text-white-50 d-block">Jan 2026</small>
+        <span class="text-white small">
+          New Changelog 0.5.0 for Ongoing Project Bookstore
+        </span>
+      </a>
+
+      <a href="WeatherPred.html" class="news-item d-block mb-2">
+        <small class="text-white-50 d-block">Jan 2026</small>
+        <span class="text-white small">
+          LAUNCHING PROJECT ! MAchine Learning Weather Prediction
+        </span>
+      </a>
+
+      <a href="detail3.html" class="news-item d-block">
+        <small class="text-white-50 d-block">Jan 2026</small>
+        <span class="text-white small">
+          New Feature For Portfolio "News"
+        </span>
+      </a>
     </div>
+
+    <!-- END NEWS -->
+
   </header>
 
   <main class="main">
@@ -137,6 +167,7 @@
                 <li><strong>Client</strong>: SMP Negeri 13 Magelang</li>
                 <li><strong>Project date</strong>: 10 Agustus, 2022</li>
                 <li><strong>Project URL</strong>: <a href="https://github.com/splendiddolpin/SI-SMP.git">https://github.com/splendiddolpin/SI-SMP.git</a></li>
+                <li><strong>Detail URL</strong>: <a href="SISMPdetails.html">Project Details ....</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
