--- a/detail3.html
+++ b/detail3.html
@@ -152,7 +152,7 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <strong>v0.5.0</strong>
-              <span class="badge bg-success">Feb 2026</span>
+              <span class="badge bg-primary">Jan 2026</span>
             </div>
             <ul class="mt-2">
               <li>Improved UI consistency across pages</li>
@@ -184,7 +184,7 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <strong>v0.3.0</strong>
-              <span class="badge bg-warning text-dark">Jan 2026</span>
+              <span class="badge bg-primary">Jan 2026</span>
             </div>
             <ul class="mt-2">
               <li>WhatsApp checkout integration</li>
