--- a/detail3.html
+++ b/detail3.html
@@ -123,6 +123,58 @@
     <div class="row g-4 mt-3">
 
       <div class="col-md-6">
+      <div class="card h-100 shadow-sm">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center mb-2">
+            <h6 class="mb-0">v0.6.5</h6>
+            <span class="badge bg-primary">Jan 2026</span>
+          </div>
+
+          <p class="text-muted small">Portfolio Navigation & Project Enhancement Update</p>
+
+          <ul class="mb-0">
+            <li>Improved sidebar navigation behavior for better responsiveness on mobile devices</li>
+            <li>Fixed navbar toggle issue where sidebar content was not visible on small screens</li>
+            <li>Enhanced visual clarity of project details on project detail pages</li>
+            <li>Improved layout spacing and typography in project view for better readability</li>
+            <li>Added clickable links (<code>href</code>) to Instagram and LinkedIn icons in the navbar</li>
+            <li>Improved accessibility and usability of social media icons</li>
+            <li>Added new project: <strong>Weather Prediction Web App (Flask)</strong></li>
+            <li>Included project description and category for the Weather Prediction project</li>
+            <li>Ensured consistent design across all project cards and detail views</li>
+            <li>Minor UI refinements and cleanup for overall portfolio consistency</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+
+       <div class="col-md-6">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <div class="d-flex justify-content-between align-items-center mb-2">
+              <h6 class="mb-0">v0.6.5</h6>
+              <span class="badge bg-primary">Jan 2026</span>
+            </div>
+
+            <p class="text-muted small">News Feature & Sidebar Enhancement</p>
+
+            <ul class="mb-0">
+              <li>Implemented "News" section in sidebar with clickable updates</li>
+              <li>Added dynamic listing of recent changelogs and project highlights</li>
+              <li>Ensured responsive display for mobile and desktop views</li>
+              <li>Enhanced toggle functionality for sidebar menu on mobile devices</li>
+              <li>Styled scrollbar and news items for better visibility and UX</li>
+              <li>Linked news items to respective detail pages for full changelog viewing</li>
+              <li>Improved visual hierarchy with icons and badge highlights for months</li>
+              <li>Adjusted sidebar z-index and padding for proper overlap with main content</li>
+              <li>Minor performance optimizations for rendering sidebar content</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6">
         <div class="card h-100 shadow-sm">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center mb-2">
