--- a/detail4.html
+++ b/detail4.html
@@ -150,6 +150,24 @@
     <div class="row g-4 mt-3">
 
       <div class="col-md-6">
+      <div class="card h-100 shadow-sm">
+        <div class="card-body">
+          <div class="d-flex justify-content-between">
+            <strong>v0.5.0</strong>
+            <span class="badge bg-primary">Jan 2026</span>
+          </div>
+          <ul class="mt-2">
+            <li>Updated mod compatibility to the latest Hearts of Iron IV version</li>
+            <li>Adjusted existing scripts to match current vanilla mechanics</li>
+            <li>Added new buffs for army, production, and construction</li>
+            <li>Enhanced political power and stability modifiers</li>
+            <li>Rebalanced modifiers to maintain learning-friendly gameplay</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+      <div class="col-md-6">
         <div class="card h-100 shadow-sm">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center mb-2">
