--- a/detail4.html
+++ b/detail4.html
@@ -156,6 +156,9 @@
             <strong>v0.5.0</strong>
             <span class="badge bg-primary">Jan 2026</span>
           </div>
+
+           <p class="text-muted small">Event & Buffs Expansion</p>
+          
           <ul class="mt-2">
             <li>Updated mod compatibility to the latest Hearts of Iron IV version</li>
             <li>Adjusted existing scripts to match current vanilla mechanics</li>
