--- a/SIMLara.html
+++ b/SIMLara.html
@@ -39,6 +39,7 @@
 <body class="portfolio-details-page">
 
   <header id="header" class="header dark-background d-flex flex-column">
+    <i class="header-toggle d-xl-none bi bi-list"></i>
     <div id="navbar-placeholder"></div>
     <script>
       fetch("partials/navbar.html")
