--- a/design2.html
+++ b/design2.html
@@ -39,7 +39,8 @@
 <body class="portfolio-details-page">
 
  <header id="header" class="header dark-background d-flex flex-column">
-    <div id="navbar-placeholder"></div>
+  <i class="header-toggle d-xl-none bi bi-list"></i>
+  <div id="navbar-placeholder"></div>
     <script>
       fetch("partials/navbar.html")
         .then(res => res.text())
