Updated Ongoing Project

--- a/detail4.html
+++ b/detail4.html
@@ -153,6 +153,27 @@
       <div class="card h-100 shadow-sm">
         <div class="card-body">
           <div class="d-flex justify-content-between">
+            <strong>v0.9.0</strong>
+            <span class="badge bg-primary">Jan 2026</span>
+          </div>
+
+           <p class="text-muted small">Finalization and testing</p>
+          
+          <ul class="mt-2">
+            <li>Updated mod compatibility to the latest Hearts of Iron IV version</li>
+            <li>Adjusted scripts to match current vanilla mechanics</li>
+            <li>Added new resource: coal</li>
+            <li>Enhanced political power and stability modifiers</li>
+            <li>Rebalanced modifiers to maintain learning-friendly gameplay</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+      <div class="col-md-6">
+      <div class="card h-100 shadow-sm">  
+        <div class="card-body">
+          <div class="d-flex justify-content-between">
             <strong>v0.5.0</strong>
             <span class="badge bg-primary">Jan 2026</span>
           </div>
