--- a/detail4.html
+++ b/detail4.html
@@ -149,7 +149,7 @@
 
     <div class="row g-4 mt-3">
 
-      <div class="col-md-6">
+    <div class="col-md-6">
       <div class="card h-100 shadow-sm">
         <div class="card-body">
           <div class="d-flex justify-content-between">
@@ -163,8 +163,8 @@
             <li>Updated mod compatibility to the latest Hearts of Iron IV version</li>
             <li>Adjusted scripts to match current vanilla mechanics</li>
             <li>Added new resource: coal</li>
-            <li>Enhanced political power and stability modifiers</li>
-            <li>Rebalanced modifiers to maintain learning-friendly gameplay</li>
+            <li>Rebalanced political power and stability modifiers</li>
+            <li>Testing in newest version of Hearts of Iron IV</li>
           </ul>
         </div>
       </div>
